k8s/ingress-nginx-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-controller
  namespace: ingress-nginx
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/component: controller
  ports:
    - name: http
      port: 80
      targetPort: http
      nodePort: 30080   # puerto expuesto en tu host
    - name: https
      port: 443
      targetPort: https
      nodePort: 30443   # puerto expuesto en tu host
