k8s/medical-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: medical-backend
  namespace: medical-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: medical-backend
  template:
    metadata:
      labels:
        app: medical-backend
    spec:
      containers:
      - name: medical-backend
        image: xnando2019/ms-medical-backend:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: medical-backend
  namespace: medical-app
spec:
  selector:
    app: medical-backend
  ports:
  - port: 8080
    targetPort: 8080
